(executable
  (name embed)
  (modules embed))

(library
  (name ocaml_grammar)
   (modules ocaml_grammar))

(rule
  (targets ocaml_grammar.ml)
  (deps    parser_raw.cmly)
  (action
    (with-stdout-to %{targets}
       (run %{exe:./embed.exe} content=parser_raw.cmly))))

(library
  (name ocaml_parser)
  (modules lexer_raw parser_raw parser_def)
  (wrapped false)
  (libraries compiler-libs.common menhirLib))

(ocamllex lexer_raw)

(menhir
  (modules parser_raw)
  (flags :standard --inspection --table --cmly))
