(library
  (name ocaml_grammar)
   (modules ocaml_grammar))

(rule
  (targets ocaml_grammar.ml)
  (deps    parser_raw.cmly)
  (action
    (with-stdout-to %{targets}
       (run %{exe:../embed/embed.exe} content=parser_raw.cmly))))

(rule
  (targets parser_raw.cmly parser_raw.ml parser_raw.mli)
  (deps parser_raw.mly)
  (action
   (run menhir --table --cmly parser_raw.mly)))
