(library
  (name oxcaml_grammar)
   (modules oxcaml_grammar))

(rule
  (targets oxcaml_grammar.ml)
  (deps    parser_raw.cmly)
  (action
    (with-stdout-to %{targets}
       (run %{exe:../embed/embed.exe} content=parser_raw.cmly))))

(rule
  (targets parser_raw.cmly parser_raw.ml parser_raw.mli)
  (deps parser_raw.mly)
  (action
   (run menhir --table --cmly parser_raw.mly)))
